you can now add a td with tab and a tr with enter

--- a/public/css/page_creator.css
+++ b/public/css/page_creator.css
@@ -1,62 +1,62 @@
 :root {
-    --control-button-size: 15px;
+  --control-button-size: 15px;
 }
 
-.editForm>div div {
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 10px;
+.editForm > div div {
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 10px;
 }
 
-.editForm>div div>label {
-    width: 250px;
+.editForm > div div > label {
+  width: 250px;
 }
-
 
 .add-button-cluster {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 5px;
-    margin: 10px 0px 30px 0px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 5px;
+  margin: 10px 0px 30px 0px;
 }
 
 .add-button-cluster * {
-    flex-basis: 200px !important;
-    flex-grow: 1;
+  flex-basis: 200px !important;
+  flex-grow: 1;
 }
 
 .custom-text-info {
-	margin-top: 60px;
-	width: 100%;
+  margin-top: 60px;
+  width: 100%;
 }
 
 .custom-text-info th {
-	font-weight: bold;
-	font-size: 1.1em;
+  font-weight: bold;
+  font-size: 1.1em;
 }
 
 .custom-text-info tr:hover td {
-	background-color: var(--color-accent-darker);
+  background-color: var(--color-accent-darker);
 }
 
-.custom-text-info tr:hover td>.custom-text-info-syntaxe-color {
-	color: var(--color);
+.custom-text-info tr:hover td > .custom-text-info-syntaxe-color {
+  color: var(--color);
 }
 
-.custom-text-info td>.custom-text-info-syntaxe-color {
-	transition: all 0.5s;
+.custom-text-info td > .custom-text-info-syntaxe-color {
+  transition: all 0.5s;
 }
 
-.custom-text-info td, .custom-text-info th {
-	background-color: var(--color-lighter);
-	padding: 10px;
-	transition: all 0.5s;
+.custom-text-info td,
+.custom-text-info th {
+  background-color: var(--color-lighter);
+  padding: 10px;
+  transition: all 0.5s;
 }
 
 .custom-text-info-syntaxe-color {
-	color: var(--color-accent-darker);
-	font-style: italic;
+  color: var(--color-accent-darker);
+  font-style: italic;
 }
 
 /*
@@ -64,70 +64,70 @@
  */
 
 .edit {
-    width: 100%;
+  width: 100%;
 }
 
 .page-element {
-    background-color: var(--color-lighter);
-    padding: 5px;
-    border-radius: 5px;
-    margin: 5px 0px 5px 0px;
+  background-color: var(--color-lighter);
+  padding: 5px;
+  border-radius: 5px;
+  margin: 5px 0px 5px 0px;
 }
 .page-element-info-text {
-    color: rgba(255, 255, 255, 0.5);
-    font-weight: 700;
-    margin: 0px;
-    margin-bottom: 5px;
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 700;
+  margin: 0px;
+  margin-bottom: 5px;
 }
 
 .page-element-input {
-    background-color: var(--color);
-    padding: 5px 10px 5px 10px;
-    caret-color: var(--color-accent);
+  background-color: var(--color);
+  padding: 5px 10px 5px 10px;
+  caret-color: var(--color-accent);
 }
 
 .page-element-input > div {
-    min-height: var(--text-size);
-    font-weight: var(--text-size);
+  min-height: var(--text-size);
+  font-weight: var(--text-size);
 }
 
 .element-header {
-    display: grid;
-    grid-template-columns: auto repeat(3, min-content);
-    grid-template-rows: auto;
+  display: grid;
+  grid-template-columns: auto repeat(3, min-content);
+  grid-template-rows: auto;
 }
 
 .control-button {
-    padding: 0px;
-    border: none;
-    height: auto;
-    width: var(--control-button-size);
-    border-radius: 0px;
-    font-size: 0em;
-    background-color: transparent;
-    margin: 0px 5px 0px 5px;
+  padding: 0px;
+  border: none;
+  height: auto;
+  width: var(--control-button-size);
+  border-radius: 0px;
+  font-size: 0em;
+  background-color: transparent;
+  margin: 0px 5px 0px 5px;
 }
 
-.control-button>img {
-    width: var(--control-button-size);
-    height: var(--control-button-size);
+.control-button > img {
+  width: var(--control-button-size);
+  height: var(--control-button-size);
 }
 
-.page-element-remove-button>img {
-    filter: brightness(0.5) sepia(1) saturate(10000%);
-    -webkit-filter: brightness(0.5) sepia(1) saturate(10000%);
+.page-element-remove-button > img {
+  filter: brightness(0.5) sepia(1) saturate(10000%);
+  -webkit-filter: brightness(0.5) sepia(1) saturate(10000%);
 }
-.page-element-remove-button:hover>img {
-    filter: brightness(1) sepia(0) saturate(100%);
-    -webkit-filter: brightness(1) sepia(0) saturate(100%);
+.page-element-remove-button:hover > img {
+  filter: brightness(1) sepia(0) saturate(100%);
+  -webkit-filter: brightness(1) sepia(0) saturate(100%);
 }
 
-.page-element-down-button>img {
-    -webkit-transform:rotate(180deg);
-    -moz-transform: rotate(180deg);
-    -ms-transform: rotate(180deg);
-    -o-transform: rotate(180deg);
-    transform: rotate(180deg);
+.page-element-down-button > img {
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 /*
@@ -135,36 +135,47 @@
  */
 
 .page-element-input.input-title {
-    font-size: 2em;
-    color: var(--color-accent);
-    font-weight: 700;
+  font-size: 2em;
+  color: var(--color-accent);
+  font-weight: 700;
 }
 
 .page-element-input.input-title2 {
-    font-size: 1.4em;
-    color: white;
-    font-weight: 500;
+  font-size: 1.4em;
+  color: white;
+  font-weight: 500;
 }
 
 .page-element-input.input-code-title {
-    margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .page-element-input.input-code {
-    font-family: "RobotoMono";
-	font-size: var(--code-size);
+  font-family: "RobotoMono";
+  font-size: var(--code-size);
 }
 
 .page-element-input.input-quote {
-    font-family: "ABeeZee";
-	padding: 10px;
-	font-size: var(--quote-size);
+  font-family: "ABeeZee";
+  padding: 10px;
+  font-size: var(--quote-size);
 }
 
 .page-element-input.input-quote:before {
-	content: '" ';
+  content: '" ';
 }
 
 .page-element-input.input-quote:after {
-	content: ' "';
+  content: ' "';
+}
+.input-table {
+  border: 2px solid var(--color-accent);
+  border-collapse: collapse;
+  max-height: 100%;
+  max-width: 100%;
+}
+.input-table td {
+  border: 2px solid var(--color-accent);
+  min-width: 50px;
+  min-height: 15px;
 }
