--- a/templates/template_fragment/_list_article.html.twig
+++ b/templates/template_fragment/_list_article.html.twig
@@ -1,1 +1,17 @@
+{#
+Copyright 2021 Jolan Aklin and Yohan Zbinden
+
+This website is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, version 3 of the License.
+
+This website is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this software.  If not, see <https://www.gnu.org/licenses/>.
+#}
+
 <a class="category-list-element" href={{ path("page", {pathTitle: article.getPathTitle}) }}><p>{{ article.getTitle }}</p></a>
