--- a/templates/template_fragment/text_editor/_text_editor.html.twig
+++ b/templates/template_fragment/text_editor/_text_editor.html.twig
@@ -9,6 +9,9 @@
     </div>
     {{form(form, { 'attr': {'class': 'editForm'} }) }}
     <div>
+        <img class="thumbnail-display"/>
+    </div>
+    <div>
         <button id="ValidateForm">Validate form</button>
     </div>
 </div>
