--- a/templates/article/add.html.twig
+++ b/templates/article/add.html.twig
@@ -26,4 +26,6 @@ Add Article
 {% endblock %}
 {% block javascripts %}
 <script type="module" src="{{asset("/scripts/edit/main.js")}}"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="{{asset("/scripts/edit/showPictureChangeEditArticle.js")}}"></script>
 {% endblock %}
