--- a/templates/template_fragment/text_editor/_json_to_text.html.twig
+++ b/templates/template_fragment/text_editor/_json_to_text.html.twig
@@ -55,6 +55,8 @@ SOFTWARE.
             </div>
             <pre><code>{{ TwigHelper.URLDecode(pageElement.Content[1].Content) }}</code></pre>
         </div>
+    {% elseif pageElement.Type == "img" %}
+        
     {% endif %}
     
 {% endfor %}
