--- a/templates/template_fragment/text_editor/_text_editor.html.twig
+++ b/templates/template_fragment/text_editor/_text_editor.html.twig
@@ -29,6 +29,7 @@ SOFTWARE.
         <button class="button-slicker" id="AddTitle2">Add a title2</button>
         <button class="button-slicker" id="AddParagraph">Add a paragraph</button>
         <button class="button-slicker" id="AddQuote">Add a quote</button>
+        <button class="button-slicker" id="AddImage">Add an image</button>
         <button class="button-slicker" id="AddCode">Add a code</button>
     </div>
     {{form(form, { 'attr': {'class': 'editForm'} }) }}
