added mail in the contact page

--- a/templates/home/contact.html.twig
+++ b/templates/home/contact.html.twig
@@ -26,4 +26,5 @@ Contact
     <li>GitHub : <a class="link" href="https://github.com/JolanAklin" target="_blank">https://github.com/JolanAklin</a></li>
 </ul>
 <p>Check out the website repo at <a class="link" href="https://github.com/JolanAklin/website-pcthings" target="_blank">https://github.com/JolanAklin/website-pcthings</a></p>
+<p>If you found a security issue or just want to contact us : <a class="link" href="mailto: contact@pcthings.ch">contact@pcthings.ch</a></p>
 {% endblock %}
